assets/sass/_core.scss
/* ... */
@media screen and (max-width:$midwidth - 1px) {
	.main-navigation {
		position: absolute;
		top: 80px;
		left: -20px;
		width: 100%;
		z-index: 200;
		background: $blue;
		opacity: 0;
		height: 0px;
		max-height: 0px;
		overflow: hidden;
		&.open {
			opacity: 1;
			height: auto;
			max-height: 800px;
			overflow: visible;
		}
		.menu,
		.menu li {
			width: 100%;
		}
		.menu {
			padding-top: 10px;
			padding-bottom: 10px;
		}
		.menu > li > a {
			color: #FFF;
			padding: 12px 10px;
			font-size: 1.45em;
		}
	}	
}
.menu-toggle {
	display: block;
	position: absolute;
	top: 0;
	right: 25px;
	width: 70px;
	height: 100%;
	background: transparent;
	-webkit-appearance: none;
	border: none;
	text-shadow: none;
	box-shadow: none;
	border-radius: 0;
	padding: 0 15px;
	@include mid {
		display: none;
	}
	span.bar {
		display: block;
		position: relative;
	}
	span.bar,
	span.bar:before,
	span.bar:after {
		width: 100%;
		height: 5px;
		background: $blue;
		transition: all ease-out .3s;
	}
	span.bar:before,
	span.bar:after {
		content:"";
		display: block;
		width: 100%;
		position: absolute;
		left: 0;
	}
	span.bar:before {
		top: -11px;
	}
	span.bar:after {
		top: 11px;
	}
	&.open {
		span.bar {
			background-color: transparent;
		}
		span.bar:before {
			transform: translateY(11px) rotate(45deg);
		}
		span.bar:after {
			transform: translateY(-11px) rotate(-45deg);
		}
	}
}

/* end of MENU */
.home {
	.site-content.wrapper {
		max-width: 100%;
		padding-left: 0;
		padding-right: 0;
	}
}
.section-intro {
	background-image:url('images/patternBlue.png');
	background-repeat: repeat;
	background-position: center;
	background-color: $navyblue;
	color: #FFF;
	.midwrap {
		padding-top: 5%;
		padding-bottom: 5%;
		font-size: 1.8em;
		background-image:url('images/shape-intro.png');
		background-size: 25%;
		background-repeat: no-repeat;
		background-position: center;
	}
}
.section-why {
	position: relative;
	z-index: 5;
	.colwrap {
		width: 100%;
		float: left;
	}
	.col {
		width: 100%;
		float: left;
		position: relative;
	}
	.flexrow {
		position: relative;
		@include flexbox-align-items(center);
	}
	.imagecol {
		background-color: $lightgrey;
		@include tab {
			width: 28%;
		}
		@include mid {
			width: 35%;
		}
		img {
			width: 100%;
			height: auto;
			float: left;
		}
	}
	.textcol {
		z-index: 5;
		@include tab {
			width: 72%;
		}
		@include mid {
			width: 65%;
		}
		.text {
			padding-left: 10%;
			padding-right: 10%;
			font-size: 1.5em;
			@include mid {
				padding-left: 10%;
				padding-right: 10%;
			}
		}
		ul {
			margin: 0 0 35px 20px;
			padding: 0 0;
			list-style: none;
			@include mid {
				margin-bottom: 45px;
			}
		}
		li {
			position: relative;
			margin: 10px 0;
			padding-left: 15px;
			@include mid {
				margin-top: 15px;
				margin-bottom: 15px;
			}
			&:before,
			&:after {
				content:"";
				display: block;
				position: absolute;
				left: 0;
				width: 4px;
				height: 6px;
				background: $limegreen;
			}
			&:before {
				top: 8px;
				transform: skew(25deg);
			}
			&:after {
				top: 14px;
				transform: skew(-25deg);
			}
		}
	}
	.section-title {
		width: 100%;
		position: relative;
		margin-top: 30px;
		margin-bottom: 30px;
		margin-left: 75px;
		@include mid {
			position: absolute;
			top: -20px;
			left: 0;
			display: inline-block;
			margin-left: -10%;
			margin-top: 0;
			margin-bottom: 0;
		}
		span {
			display: inline-block;
			background: $navyblue;
			color: #FFF;
			text-transform: uppercase;
			font-size: 1.8em;
			line-height: 1;
			padding: 12px 30px;
			position: relative;
			&:before,&:after {
				content:"";
				display: inline-block;
			}
			&:before {
				width: 0; 
				height: 0; 
				border-bottom: 25px solid $navyblue;
				border-left: 20px solid transparent; 
				position: absolute;
				bottom: 0;
				left: -20px;
			}
			&:after {
				width: 20px;
				height: 2px;
				background: $limegreen;
				position: absolute;
				bottom: -5px;
				left: -20px;
			}
			i {
				display: block;
				width: 100%;
				height: 2px;
				background: $limegreen;
				position: absolute;
				bottom: -5px;
				left: 0;
			}
		}
	}
}
.hashtagwrap {
	width: 100%;
	float: left;
	background: $limegreen;
	position: relative;
	margin-top: 30px;
	@include mid {
		margin-top: -30px;
	}
	.hashtag {
		color: #FFF;
		font-size: 1.5em;
		font-weight: 600;
		line-height: 1.3;
		padding-left: 30px;
    	padding-right: 30px;
    	padding-top: 12px;
    	padding-bottom: 12px;
    	position: relative;
    	width: 100%;
		@include tab {
			padding-left: 7%;
			padding-right: 7%;
			width: 72%;
			float: right;
		}
		@include mid {
			width: 65%;
		}
		.txt {
			position: relative;
			z-index: 5;
			width: 100%;
			overflow: hidden;
			@include flexbox();
			@include flexbox-wrap(wrap);
			@include flexbox-align-items(center);
			span {
				position: relative;
				z-index: 5;
				background: $limegreen;
				padding-right: 15px;
			}
		}
		.lines {
			position: absolute;
			left: 0;
			width: 100%;
			height: 2px;
			background: #FFF;
			&:before, &:after {
				content:"";
				display: block;
				width: 100%;
				height: 2px;
				background: #FFF;
				position: absolute;
				left: 0;
			}
			&:before {
				top: -6px;
			}
			&:after {
				top: 6px;
			}
		}
	}
}
.section-full {
	.t2 {
		text-transform: uppercase;
		color: $navyblue;
		font-size: 35px;
		font-weight: 600;
		margin: 0 0;
	}
}
/* ... */

